# make_booklet

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-18-booklet-pdf-creator.md  2026-03-22-optimize-pdf-booklet.md
docs/superpowers/specs/: 2026-03-18-booklet-pdf-creator-design.md  2026-03-22-a4-conversion-options-design.md  2026-03-22-optimize-pdf-booklet-design.md
src/make_booklet/: cli.py  creep.py  pdf_processor.py  reorder.py
tests/: test_cli.py  test_cli_args.py  test_creep.py  test_downsample.py  test_integration.py  test_parallel_downsample.py  test_pdf_a4.py  test_pdf_processor.py  test_reorder.py
