[project]
name = "make-booklet"
version = "0.1.0"
description = "A tool to create booklets from PDF files."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymupdf>=1.27.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
